--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ on:
         default: 'yes'
 
 jobs:
-  release_edge:
+  release_identityedge:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v2
