Add functional tests for setting Ad ID

--- a/AEPIdentityEdge.xcodeproj/xcshareddata/xcschemes/AEPIdentityEdge.xcscheme
+++ b/AEPIdentityEdge.xcodeproj/xcshareddata/xcschemes/AEPIdentityEdge.xcscheme
@@ -26,7 +26,18 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "D43BAB0F25BBA4F700B08CC0"
+            BuildableName = "AEPIdentityEdge.framework"
+            BlueprintName = "AEPIdentityEdge"
+            ReferencedContainer = "container:AEPIdentityEdge.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO">
@@ -35,6 +46,16 @@
                BlueprintIdentifier = "D43BAB2425BBA8A800B08CC0"
                BuildableName = "UnitTests.xctest"
                BlueprintName = "UnitTests"
+               ReferencedContainer = "container:AEPIdentityEdge.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "D43BAB3525BBA8C700B08CC0"
+               BuildableName = "FunctionalTests.xctest"
+               BlueprintName = "FunctionalTests"
                ReferencedContainer = "container:AEPIdentityEdge.xcodeproj">
             </BuildableReference>
          </TestableReference>
