--- a/AEPEdgeIdentity.xcodeproj/xcshareddata/xcschemes/FunctionalTests.xcscheme
+++ b/AEPEdgeIdentity.xcodeproj/xcshareddata/xcschemes/FunctionalTests.xcscheme
@@ -19,7 +19,7 @@
                BlueprintIdentifier = "D43BAB3525BBA8C700B08CC0"
                BuildableName = "FunctionalTests.xctest"
                BlueprintName = "FunctionalTests"
-               ReferencedContainer = "container:AEPIdentityEdge.xcodeproj">
+               ReferencedContainer = "container:AEPEdgeIdentity.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
