[AMSDK-11139] Rename to AEPEdgeIdentity (#17)
* Renaming to AEPEdgeIdentity

rename module to AEPEdgeIdentity

rename objc

rename extension name + drop Edge from class name

rename friendly name to Identity

rename objc extension

Rename project to AEPEdgeIdentity

More renaming, drop Edge from naming when not needed

format

Renaming in scripts

Add xcframework target

* More renaming

* Update core dependency

* Fix tests after merge with dev

* Rename objc to AEPMobileEdgeIdentity, friendly name update, fix tests

* Add copyright template back

* Rename to TestApp

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,7 +53,7 @@ jobs:
           key: cocoapods-cache-v1-{{ arch }}-{{ .Branch }}-{{ checksum "Podfile.lock" }}
           paths:
             - ./Pods
-            - ./SampleApps/AEPIdentityEdgeSampleApp/Pods
+            - ./SampleApps/TestApp/Pods
             - ~/.cocoapods
 
       - run:
@@ -76,7 +76,7 @@ jobs:
       # code coverage
       - run:
           name: Upload Code Coverage Report
-          command: bash <(curl -s https://codecov.io/bash) -v -X s3 -c -D "./build/out" -J "AEPIdentityEdge" -t ${CODECOV_TOKEN}
+          command: bash <(curl -s https://codecov.io/bash) -v -X s3 -c -D "./build/out" -J "AEPEdgeIdentity" -t ${CODECOV_TOKEN}
 
       # verify XCFramework archive builds
       - run:
