Update config to only include explicitly labeled PRs, full changelog link at the bottom Update documentation to reflect feedback and updated output style Remove draft-specific config, and draft tool points to actual changelog config (same as prd)

--- a/.github/workflows/release-drafter-draft-release.yml
+++ b/.github/workflows/release-drafter-draft-release.yml
@@ -13,10 +13,10 @@ on:
         required: true
         default: 'yes'
 
-      create_as_draft:
-        description: 'create as draft release? ("no" to create real release)'
+      create_full_release:
+        description: 'create as full release? ("no" to create draft release)'
         required: true
-        default: 'yes'
+        default: 'no'
 
 jobs:
   create_release:
@@ -29,8 +29,8 @@ jobs:
         name: v${{ github.event.inputs.tag }}
         tag: ${{ github.event.inputs.tag }}
         version: ${{ github.event.inputs.tag }}
-        publish: ${{ github.event.inputs.create_as_draft == 'no' }}
-        config-name: release-drafter-draft-release-config.yml
+        publish: ${{ github.event.inputs.create_full_release == 'yes' }}
+        config-name: release-drafter.yml
         
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
