--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,4 +1,50 @@
+# Config file for release drafter
+name-template: 'v$RESOLVED_VERSION'
+tag-template: 'v$RESOLVED_VERSION'
+categories:
+  - title: 'Features'
+    labels:
+      - 'feature'
+      - 'enhancement'
+  - title: 'Bug Fixes'
+    labels:
+      - 'fix'
+      - 'bugfix'
+      - 'bug'
+  - title: 'Deprecations'
+    labels:
+      - 'deprecated'
+  - title: 'Maintenance'
+    labels: 
+      - 'buildscripts'
+      - 'documentation'
+      - 'maintenance'
+include-labels:
+  - 'bug'
+  - 'bugfix'
+  - 'buildscripts'
+  - 'deprecated'
+  - 'documentation'
+  - 'enhancement'
+  - 'feature'
+  - 'fix'
+  - 'maintenance'
+change-template: '$TITLE (#$NUMBER) @$AUTHOR'
+change-title-escapes: '\<*_&' # You can add # and @ to disable mentions, and add ` to disable code blocks.
+version-resolver:
+  major:
+    labels:
+      - 'major'
+  minor:
+    labels:
+      - 'minor'
+  patch:
+    labels:
+      - 'patch'
+  default: patch
 template: |
-  ## What’s Changed
+  ## Changes
 
   $CHANGES
+
+  **Full Changelog**: https://github.com/$OWNER/$REPOSITORY/compare/$PREVIOUS_TAG...$RESOLVED_VERSION
