--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -3,14 +3,14 @@ name-template: 'v$RESOLVED_VERSION'
 tag-template: 'v$RESOLVED_VERSION'
 categories:
   - title: 'Features'
-    labels:
+    labels: 
       - 'feature'
+  - title: 'Enhancements'
+    labels: 
       - 'enhancement'
   - title: 'Bug Fixes'
     labels:
-      - 'fix'
       - 'bugfix'
-      - 'bug'
   - title: 'Deprecations'
     labels:
       - 'deprecated'
