--- a/SampleApps/TestAppObjC/Info.plist
+++ b/SampleApps/TestAppObjC/Info.plist
@@ -20,6 +20,8 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+    <key>NSUserTrackingUsageDescription</key>
+    <string>App would like to access IDFA for tracking purposes</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
