Update fix category to include more target words Update Bug Fixes section to remove bug label reserved for issues labeling Update job name

--- a/.github/label-pr-config.yml
+++ b/.github/label-pr-config.yml
@@ -9,7 +9,7 @@ autolabeler:
     branch:
       - '/fix\/.+/'
     title:
-      - '/(?<![\w])((fix)|(fixes))(?![\w])/i'
+      - '/(?<![\w])((fix)|(fixes)|(fixed)|(bug)|(bugfix)|(bug fix))(?![\w])/i'
   - label: 'Type: feature'
     branch:
       - '/feature\/.+/'
@@ -40,7 +40,6 @@ categories:
       - 'Type: enhancement'
   - title: 'Bug Fixes'
     labels:
-      - 'Type: bug'
       - 'Type: bugfix'
   - title: 'Deprecations'
     labels:
