Feature: Added new getUrlVariables API  (#79)
* [MOB-15816] Implemented getUrlVariables public API and added unit tests for the same (#58)

* [MOB-15816] Implemented getUrlVariables public API and unit tests for the same

* [MOB-15816] Refactoring and cleanup

* [MOB-15816] Refactored url utils

* [MOB-15816] Refactored code to simplify util methods for testing.

* [MOB-15816] Added getURLVariable API in test app

* [MOB-15816] Fixed and added more tests

* [MOB-15816] Update codecov patch configuration

* [MOB-15816] Review fixes

* [MOB-15816] typo fix

* [MOB-15816] Minor refactoring and test fixes

* [MOB-15816] Update comments and description

* [MOB-15816] Minor doc fixes, renaming constants and added getUrlVariables API in objective-c test app

* [MOB-15818] Added api-reference in the Documentation directory. Added description and samples for all the APIs along with the new getUrlVariables API.

* [MOB-15818] Added extension registration step in the setup section of the documentation.

* [MOB-15818] format fixes

* [MOB-15818] Review fixes and adding table format for syntax and sample.

* [MOB-15818] format fixes

* [MOB-15818] Look at different format to represent API sample and syntax

* [MOB-15818] Formatting changes

* [MOB-15818] More format fixes

* trying different formats

* format experiments

* format changes

* check if we can have table without headers in markdown

* [MOB-15818] Add objectivec sample for extensionVersion API

* [MOB-15818] Add Objective-C samples for getECID API

* [MOB-15818] Add dividers after every API for better readability

* [MOB-15818] Added ObjectiveC sample for all the APIs and format fixes

* [MOB-15818] Format fixes

* [MOB-15818] Formated info and warning sections

* [MOB-15818] Review fixes

* [MOB-15818] Minor fixes

* [MOB-15818] Added objective-c samples for public classes (#68)

* [MOB-15818] Added objective-c samples for public classes and format

--- a/codecov.yml
+++ b/codecov.yml
@@ -9,7 +9,10 @@ coverage:
 
   status:
     project: yes
-    patch: yes
+    patch:
+      default:
+        target: 90%
+        threshold: 5%
     changes: no
 
   ignore:
@@ -17,6 +20,7 @@ coverage:
     - "./Tests/.*"
     - "./SampleApps"
     - "./build"
+    - "./Documentation"
 
 parsers:
   gcov:
