--- a/.github/workflows/pull-request-labeler.yml
+++ b/.github/workflows/pull-request-labeler.yml
@@ -10,10 +10,14 @@ jobs:
     - uses: release-drafter/release-drafter@v5
       with:
         name: v${{ github.event.inputs.tag }}
-        tag: ${{ github.event.inputs.tag }}
+        tag: pr-label-release-to-delete
         version: ${{ github.event.inputs.tag }}
         publish: false
         config-name: label-pr-config.yml
         
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      # GitHub CLI available on all GitHub runners; delete draft release with auto-confirmation flag
+    - run: gh release delete pr-label-release-to-delete -y
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
