--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -25,6 +25,9 @@ jobs:
     - uses: actions/checkout@v2
       with:
         ref: main
+    - uses: maxim-lobanov/setup-xcode@v1
+      with:
+        xcode-version: '14.1'
 
     - name: Install jq
       run: brew install jq
@@ -52,7 +55,15 @@ jobs:
         echo podspec file verification starts:
         make test-podspec
 
-    - uses: release-drafter/release-drafter@v5
+    - name: Build Artifacts
+      if: ${{ github.event.inputs.action_tag == 'yes' }}
+      run: |
+        make archive
+        make zip
+
+    - name: Create GH Release
+      id: create_release
+      uses: release-drafter/release-drafter@v5
       if: ${{ github.event.inputs.action_tag == 'yes' }}
       with:
         name: v${{ github.event.inputs.tag }}
@@ -61,6 +72,18 @@ jobs:
         publish: true
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Upload - AEPEdgeIdentity
+      uses: actions/upload-release-asset@v1
+      if: ${{ github.event.inputs.action_tag == 'yes' }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./build/AEPEdgeIdentity.xcframework.zip
+        asset_name: AEPEdgeIdentity-${{ github.event.inputs.tag }}.xcframework.zip
+        asset_content_type: application/zip
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 
     - name: Publish Pods - AEPEdgeIdentity
       if: ${{ github.event.inputs.release_AEPEdgeIdentity == 'yes' }}
