Update SwiftLint to 0.52.0

--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -15,13 +15,16 @@ opt_in_rules: # some rules are opt-in only
 - sorted_imports
 - toggle_bool
 - unneeded_parentheses_in_closure_argument
-- unused_import
 - vertical_parameter_alignment_on_call
 excluded: # paths to ignore during linting
 - Carthage
 - SampleApps/*/Pods
 - Pods
 - .build
+
+analyzer_rules:
+- unused_import
+
 empty_count: 
     severity: warning
 force_cast: warning
