--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,14 +20,14 @@ on:
 
 jobs:
   release_EdgeIdentity:
-    runs-on: macos-latest
+    runs-on: macos-13
     steps:
     - uses: actions/checkout@v2
       with:
         ref: main
     - uses: maxim-lobanov/setup-xcode@v1
       with:
-        xcode-version: '14.1'
+        xcode-version: '15'
 
     - name: Install jq
       run: brew install jq
@@ -89,7 +89,7 @@ jobs:
       if: ${{ github.event.inputs.release_AEPEdgeIdentity == 'yes' }}
       run: |
         set -eo pipefail
-        pod trunk push AEPEdgeIdentity.podspec --allow-warnings --synchronous --swift-version=5.1
+        pod trunk push AEPEdgeIdentity.podspec --allow-warnings --synchronous
         pod repo update
       env:
         COCOAPODS_TRUNK_TOKEN: ${{ secrets.COCOAPODS_TRUNK_TOKEN }}
